--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ fastapi_cors==0.0.6
 h11==0.16.0
 httptools==0.7.1
 idna==3.11
+Jinja2==3.1.4
 marshmallow==4.0.1
 pydantic==2.12.3
 pydantic-settings==2.11.0
